# counterfactuals

./: .gitignore  req.txt
common/: celery_app.py
examples/: celery_ensemble.py  check.ps1  dataset.py  ensemble.py  env_setup.sh  explainer.py  remote.py  remote_preprocessed.py  requirements.txt  run.ps1  selectors.py  selectors_comparison.py  simple.py  temp_model.pt  test_growing_spheres.py  torch_model.py
experiments/: DiCE_ml.ipynb  alibi_CFRL.ipynb  alibi_MNIST.ipynb  alibi_proto.ipynb  captum.ipynb  carla.ipynb  carla_MNIST.ipynb  celebA.ipynb  celebA_ensemble.ipynb  explainers.ipynb  genreate_counterfactuals_with_shap_explanation.ipynb  gs_imutable.ipynb  iris torch.ipynb  iris_model.pth  latent_space_counterfactuals.ipynb  mnist.ipynb  mnist_ensemble.ipynb  plot_mnist.ipynb  titanic.py  titanic_ae.ipynb  titanic_classifier.ipynb  titanic_counterfactuals_with_shap.ipynb  titanic_results.json  titanic_tui.py
notes/: 2025_01_03 Initial research.md  Alibi.md  carla1.md  (+5 more)
src/: README.md  main.py  pyproject.toml  req.txt
src/explainers_lib/: __init__.py  aggregators.py  counterfactual.py  datasets.py  ensemble.py  explainers.py  model.py
src/explainers_lib/explainers/: __init__.py  celery_explainer.py  celery_remote.py  growing_spheres.py  remote.py  wachter.py
src/explainers_lib/explainers/carla/: actionable_recourse.py  face.py  growing_spheres.py
src/explainers_lib/explainers/dice/: dice.py
src/explainers_lib/explainers/native/: face.py  growing_spheres.py  wachter.py
src/explainers_lib/utils/: pareto.py  scores.py  transform.py  transformations.py
(+98 files in other folders)
