[build-system]
requires = ["setuptools >= 65"]
build-backend = "setuptools.build_meta"

[project]
name = "explainers_lib"
requires-python = ">= 3.7"
dependencies = [
   "tqdm",
   "numpy",
   "EasyMCDM",
   "pandas",
   "celery==5.2.7",
   "redis==4.5.5",
   "rich",
   "scikit-learn",
   "pyarrow",
   "skops"
]
dynamic = ["version"]
authors = [
  { name = "Piotr Balewski" },
  { name = "Mateusz Bernart" },
  { name = "Patryk Janiak" },
  { name = "Izabela Szczech" },
]
